fixed skills spacing, random refactoring

--- a/css/main.css
+++ b/css/main.css
@@ -173,24 +173,24 @@ body{
 
 #links, #social{
   margin: 0 30px 30px 0;
-}
-
-#links li{
   font-family: 'Work Sans', sans-serif;
-  font-size: 180%;
   font-weight: 200;
   letter-spacing: 1px;
   color: #ffffff;
+  
+  
+}
+
+#links li{
+  font-size: 180%;
   margin: 30px 0 0 0;
-  display: inline-block;
   float: right;
+  display: inline-block;
+
 }
 
 #social li{
-  font-family: 'Work Sans', sans-serif;
   font-size: 80%;
-  font-weight: 200;
-  letter-spacing: 1px;
   margin: 10px 0 0 0;
   display: inline-block;
   float: right;
@@ -286,7 +286,8 @@ h2{
 
 h3{
   font-family: 'Hind', sans-serif;
-  font-size: 140%;
+  font-weight: normal;
+  font-size: 90%;
   letter-spacing: 3px;
   padding: 0;
   margin: 0;
@@ -295,7 +296,7 @@ h3{
 h4{
   font-family: 'Hind', sans-serif;
   font-weight: normal;
-  font-size: 110%;
+  font-size: 80%;
   color: #999999;
   padding: 0;
   margin: 0;
